# LFM-speech_dataset_studio

./: CITATION.cff  LICENSE  README.md  download  pyproject.toml  requirements-core.txt  requirements-extension.txt
docs/: COOKBOOK_PR  DATASET_AND_BUNDLES.md  EXPERIMENTS.md  FAQ.md  LIMITATIONS.md  LINKEDIN_POST.md  LIQUID_AI_USAGE.md  MATHEMATICS.md  PROJECT_OVERVIEW.md  README_RESULTS_TEMPLATE.md  TECHNICAL_DESIGN.md  TECHNIQUES_USED.md
notebook/: banlfm-wavjepa-nat.ipynb
scripts/: 01_prepare_banspeech.py  02_audit_lfm_audio_runner.py  03_run_bangla_asr.py  04_liquid_repair_potential.py  05_route_and_abstain.py  06_make_action_cards.py  07_make_artifacts.py
src/: artifacts.py  asr_baseline.py  audio_io.py  cards.py  lfm_audio_audit.py  metrics.py  repair.py  router.py  schemas.py  text_bn.py
tests/: test_card_schema.py  test_lfm_audio_error_parser.py  test_router_abstention.py  test_text_bn.py
