[project]
name = "lfm-speech-dataset-studio"
version = "0.1.0"
description = "Local-first Bangla speech dataset studio for Liquid model capability auditing and reviewable action cards."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "SecureGPT Point"}]
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
